@@ -2,7 +2,7 @@ public class Player {
     private String name;
     
     public Player(String name) {
-        if (name.trim().isEmpty()) {
+        if (name.isBlank()) {
             throw new IllegalArgumentException("Имя игрока не может быть пустым");
         }
         this.name = name.trim();
